# suds

./: CHANGES.rst  README.rst  setup.cfg  setup.py
suds/: __init__.py  builder.py  cache.py  client.py  metrics.py  options.py  plugin.py  reader.py  resolver.py  servicedefinition.py  serviceproxy.py  soaparray.py  store.py  sudsobject.py  version.py  wsdl.py  wsse.py
suds/bindings/: binding.py  document.py  multiref.py  rpc.py
suds/mx/: appender.py  core.py  encoded.py  literal.py  typer.py
suds/sax/: __init__.py  attribute.py  document.py  element.py  parser.py  text.py
suds/transport/: http.py  options.py
suds/umx/: attrlist.py  core.py  encoded.py  typed.py
suds/xsd/: __init__.py  deplist.py  query.py  schema.py  sxbase.py  sxbasic.py  sxbuiltin.py
tests/: __init__.py  indirect_parametrize.py  test_argument_parser.py  test_cache.py  test_date_time.py  test_input_parameters.py  test_reply_handling.py  test_request_construction.py  test_suds.py  test_timezone.py  test_transport.py  test_transport_http.py
