[metadata]
name = suds-bis
author = Jeff Ortel
author_email = jortel@redhat.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Lightweight SOAP client
long_description = file:README.rst
url = https://github.com/jaraco/suds
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Internet
keywords =
	SOAP
	web
	service
	client
version = 0.6

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
	importlib_metadata

[options.extras_require]
testing =
	pytest
